[project]
name = "ao3bookify"
version = "0.1.0"
description = "Python program that parses a HTML download of an AO3 fic."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "lxml>=6.0.2",
    "playwright>=1.57.0",
    "requests>=2.32.5",
]
